# Wave-Simulator

./: .gitignore  CMakeLists.txt  README.md  Wave Sim  imgui.ini
docs/: FEATURE_UPDATE_V2.md  PLANNED_FEATURES.md
include/glad/: glad.h
resources/shaders/: vertex.glsl
src/: WaveSim.cpp  WaveSim.cpp.backup  glad.c
utils/: screenshot_capture.py
